<resources>
    <string name="admin_panel">Product Management</string>
    <string name="name_hint">Name</string>
    <string name="product_id_hint">Product ID</string>
    <string name="description_hint">Description</string>
    <string name="price_hint">Price</string>
    <string name="stock_hint">Qty</string>
    <string name="pic_urls_hint">Pic URLs (comma separated)</string>
    <string name="submit_button_admin">Submit</string>
    <string name="app_name">Amrozia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Amrozia</string>
    <string name="nav_header_subtitle">Women of Today</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_sidenavbar_home">Home</string>
    <string name="menu_sidenavbar_shop">Shop Ajrakh</string>
    <string name="menu_sidenavbar_ship">Shipping and Returns</string>
    <string name="menu_sidenavbar_contact">Contact Us</string>
    <string name="menu_sidenavbar_blog">Blog</string>
    <string name="menu_sidenavbar_faq">FAQ</string>
    <string name="menu_sidenavbar_about">About Us</string>
    <string name="menu_sidenavbar_gift">Gift Card</string>
    <string name="mashru_silk">Mashru Silk Collection</string>
    <string name="staple_cotton">Staple Cotton Collection</string>
    <string name="premium_rayon">Premium Rayon Collection</string>
    <string name="rayon">Rayon Collection</string>
    <string name="cotton">Cotton Collection</string>
    <string name="see_all">See all</string>
    <string name="search_bar_hint">Search Amrozia.in</string>
    <string name="contact_heading">Get in touch with us</string>
    <string name="faq_heading">Frequently Asked Questions</string>
    <string name="operating_hours">Operating Hours</string>
    <string name="monday_friday">Monday - Friday: 9:00am - 6:30pm</string>
    <string name="sunday">Sunday and Public Holiday: Closed</string>
    <string name="contact_name">Name</string>
    <string name="contact_name_hint">Enter your name</string>
    <string name="contact_email">Email</string>
    <string name="contact_email_hint">Enter your email</string>
    <string name="contact_phone">Phone</string>
    <string name="contact_phone_hint">Enter your phone number</string>
    <string name="contact_subject">Subject</string>
    <string name="contact_subject_hint">Type the subject</string>
    <string name="contact_message">Message</string>
    <string name="contact_message_hint">Type your message here...</string>
    <string name="contact_submit">Submit</string>
    <string name="contact_support_email">support@amrozia.in</string>
    <string name="contact_support_phone">+91 7219777055</string>
    <string name="copyright">©2023 Global Fashion. All Rights Reserved.</string>
    <string name="shipping_and_delivery_title">Shipping &amp; Delivery</string>
    <string name="shipping_charges_question">1) What are the shipping charges?</string>
    <string name="shipping_charges_answer">Delivery charge varies with each product. Mostly we provide FREE delivery in India. Some items may have a shipping cost depending on the nature of the product. For International orders, the shipping charges are different for different items and are mentioned clearly on the product page. Also Prices may be different for different countries to account for shipping costs and prices listed in INR are only for India.</string>
    <string name="estimated_delivery_time_question">2) What is the estimated delivery time?</string>
    <string name="estimated_delivery_time_answer">The estimated time of delivery is within 7 working days for domestic orders and 21 working days for international orders. All orders get shipped within 5 days from our warehouse.</string>
    <string name="delivery_method_question">3) How will the delivery be done?</string>
    <string name="delivery_method_answer">We try to process all deliveries through reputed courier companies like Bluedart, Aramex, DTDC, DHL, and Fedex. In some cases, where the pin/zipcode is not serviceable by these courier companies, we use Indian Speed Post for those deliveries. If there is no courier service available in your area, we will get in touch with you and try to work out a convenient alternate delivery location that is serviced by our courier partners.</string>
    <string name="international_delivery_question">4) Does Global Fashion deliver internationally?</string>
    <string name="international_delivery_answer">Yes, we do deliver items internationally. You are more than welcome to make your purchases on our site from anywhere in the world. We use DHL, DTDC, India Post, or FEDEX to deliver your shipments safely and timely to you.</string>
    <string name="track_delivery_question">5) How can I track the delivery of my order?</string>
    <string name="track_delivery_answer">All items are delivered through reputed courier partners who will provide a Tracking ID for your order. We also email you the tracking details after we dispatch your order.</string>
    <string name="cod_option_question">6) Why is the COD option not offered in my location?</string>
    <string name="cod_option_answer">Availability of Cash on Delivery depends on the ability of our courier partner servicing your location to accept cash as payment at the time of delivery. Our courier partners have limits on the cash amount payable on delivery depending on the destination, and your order value might have exceeded this limit. Please enter your pin code on the product page to check if COD is available in your location.</string>
    <string name="out_of_stock_question">7) What does &quot;Out of Stock&quot; mean?</string>
    <string name="out_of_stock_answer">It means that currently, the item is not available for sale.</string>
    <string name="blog_rayon_title">RAYON FABRIC</string>
    <string name="blog_rayon_production_title">How Rayon is Made</string>
    <string name="blog_rayon_production">Rayon is made from wood, treated with caustic soda to form cellulose, which is then converted into a viscose solution. This solution is spun into filaments and solidified to form regenerated cellulose.</string>
    <string name="blog_rayon_washing_tips_title">Washing and Drying Tips</string>
    <string name="blog_rayon_washing_tip1">1. Hand wash rayon clothes with a mild detergent in cold water. Rayon is weak when wet and less durable than cotton.</string>
    <string name="blog_rayon_washing_tip2">2. Machine wash rayon blends on the delicate setting, but be cautious as it may damage the fabric.</string>
    <string name="blog_rayon_washing_tip3">3. Always read the label for specific washing instructions. If it says dry clean only, avoid washing at home to prevent damage or shrinkage.</string>
    <string name="blog_rayon_washing_tip4">4. Avoid hanging rayon clothes to dry as they can lose their shape. Use line drying or flat drying methods instead.</string>
    <string name="blog_rayon_source">Source: Wikipedia</string>
    <string name="blog_ajrakh_title">AJRAK ; AJRAKH</string>
    <string name="blog_ajrakh_intro">Ajrak, also known as Ajrakh, is a unique form of block printing found in Ajrakhpur, Kutch district, India. These shawls display special designs and patterns made using block printing by stamps. Ajrak prints are a symbol of Sindhi culture and traditions, and are also popular in Gujarat due to their historical roots in the Indus Valley Civilization.</string>
    <string name="blog_ajrakh_dyes_title">Dyes</string>
    <string name="blog_ajrakh_dyes">Ajrak products are made with natural dyes, including both vegetable and mineral dyes. Indigo is a key dye used in the production process.</string>
    <string name="blog_ajrakh_blocks_title">Ajrak Blocks</string>
    <string name="blog_ajrakh_blocks">Common Ajrak patterns include dots between two lines, often created with brass nails. The designs are influenced by Mughal-era geometry and Muslim architectural elements, with patterns formed by the interaction of circles and the use of a grid system.</string>
    <string name="blog_ajrakh_source">Source: Wikipedia, Vogue India</string>
    <string name="cancellation_returns_title">Cancellation and Returns</string>
    <string name="returns_work">How do returns work?</string>
    <string name="returns_work_answer">You can raise a request within 3 days to return your items by sending an email to support@amrozia.in by following the shipping and returns policy.</string>
    <string name="returns_time_limit">Can items be returned after the time period mentioned in Returns Policy?</string>
    <string name="returns_time_limit_answer">No, we will not be able to accept returns after the time period mentioned in the Returns Policy.</string>
    <string name="return_freebie">Do I have to return the freebie when I return a product?</string>
    <string name="return_freebie_answer">Yes, the freebie has to be returned along with the product.</string>
    <string name="shipping_title">Shipping</string>
    <string name="estimated_delivery_time">What is the estimated delivery time?</string>
    <string name="estimated_delivery_time_ans">We generally procure and ship the items within the time specified on the product page. Business days exclude public holidays and Sundays.</string>
    <string name="tracking_order">Tracking your Order</string>
    <string name="tracking_order_answer">We will be sending an email with the details of the tracking number for you to be able to track your orders at all stages till the time it is delivered to you.</string>
    <string name="money_back_guarantee">Money Back Guarantee</string>
    <string name="money_back_guarantee_answer">At Global Fashion, we have a no questions asked return policy. We ensure that our buyers have the best online shopping experience in a stress-free and free manner. We, therefore, offer “100% Buyer Protection Program” for our buyers. At the same time, we vow to be fair towards you.</string>
    <string name="payments_title">Payments</string>
    <string name="payment_methods">What kinds of payment methods do you accept?</string>
    <string name="payment_methods_answer">We offer you multiple payment methods. Whatever your online mode of payment, you can rest assured that our trusted payment gateway partners use secure encryption technology to keep your transaction details confidential at all times. You may use Internet Banking, Debit Card, Credit Card, and Cash on Delivery to make your purchase.</string>
    <string name="octroi_charge">Who bears the Octroi for certain locations in India?</string>
    <string name="octroi_charge_answer">Nagpur, Sangli, Dombivili, Nasik, Mumbai, Pimpri Chinchwardi, Kothrud(Pune), Ahmednagar, Pune, Akola are Octroiable cities. Any applicable octroi will be payable by the customer.</string>
    <string name="egift_card_title">Amrozia | Global Fashion</string>
    <string name="egift_card_description">You can\'t go wrong with a gift card. Choose an amount and write a personalized message to make this gift your own. Available to use in Ajrakh Shop.</string>
    <string name="amount">Amount</string>
    <string name="amount_100">₹100</string>
    <string name="amount_200">₹200</string>
    <string name="amount_300">₹300</string>
    <string name="amount_500">₹500</string>
    <string name="amount_1000">₹1,000</string>
    <string name="other_amount">Other amount</string>
    <string name="recipient_info">Who\'s the gift card for?</string>
    <string name="for_someone_else">For someone else</string>
    <string name="for_myself">For myself</string>
    <string name="recipient_email">Recipient email *</string>
    <string name="recipient_name">Recipient name</string>
    <string name="message">Message</string>
    <string name="buy_now">Buy Now</string>
</resources>