<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_sidenavbar_home" />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/shop_ajrakh_icon"
            android:title="@string/menu_sidenavbar_shop" />
        <item
            android:id="@+id/nav_ship"
            android:icon="@drawable/shipping_returns_icon"
            android:title="@string/menu_sidenavbar_ship" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contact_us_icon"
            android:title="@string/menu_sidenavbar_contact" />
        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/blog_icon"
            android:title="@string/menu_sidenavbar_blog" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/faq_icon"
            android:title="@string/menu_sidenavbar_faq" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about_us_icon"
            android:title="@string/menu_sidenavbar_about" />
        <item
            android:id="@+id/nav_gift"
            android:icon="@drawable/gift_card_icon"
            android:title="@string/menu_sidenavbar_gift" />

    </group>
</menu>