<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="190dp"
            android:src="@drawable/faq_image"
            android:layout_gravity="center" />

        <!-- Cancellation and Returns Section -->
        <TextView
            android:id="@+id/cancellation_returns_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancellation_returns_title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/returns_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/returns_work"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/returns_work_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/returns_work_answer"
            android:layout_marginTop="8dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/returns_time_limit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/returns_time_limit"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/returns_time_limit_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/returns_time_limit_answer"
            android:layout_marginTop="8dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/return_freebie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/return_freebie"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/return_freebie_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/return_freebie_answer"
            android:layout_marginTop="8dp"
            android:textColor="@color/black" />

        <!-- Shipping Section -->
        <TextView
            android:id="@+id/shipping_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shipping_title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/estimated_delivery_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/estimated_delivery_time"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/estimated_delivery_time_ans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/estimated_delivery_time_ans"
            android:layout_marginTop="8dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tracking_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tracking_order"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tracking_order_ans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tracking_order_answer"
            android:layout_marginTop="8dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/money_back_guarantee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/money_back_guarantee"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/money_back_guarantee_ans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/money_back_guarantee_answer"
            android:layout_marginTop="8dp"
            android:textColor="@color/black" />

        <!-- Payments Section -->
        <TextView
            android:id="@+id/payments_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payments_title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/payment_methods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_methods"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/payment_methods_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_methods_answer"
            android:layout_marginTop="8dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/octroi_charge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/octroi_charge"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/octroi_charge_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/octroi_charge_answer"
            android:layout_marginTop="8dp"
            android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>