<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/light_pink">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/grid_icon"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_grid"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp" />

                <TextView
                    android:id="@+id/gift_card_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/egift_card_title"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/pink"
                    android:layout_marginTop="9dp"
                    android:textAlignment="center"
                    android:layout_marginEnd="2dp" />
            </LinearLayout>

            <ImageView
                android:layout_width="310dp"
                android:layout_height="215dp"
                android:src="@drawable/gift_card_image"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/egift_card_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/egift_card_description"
                android:textSize="16sp"
                android:textColor="@color/pink"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp" />

            <TextView
                android:id="@+id/amount_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <RadioGroup
                android:id="@+id/amount_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/amount_100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_100"
                    android:layout_marginBottom="8dp" />

                <RadioButton
                    android:id="@+id/amount_200"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_200"
                    android:layout_marginBottom="8dp" />

                <RadioButton
                    android:id="@+id/amount_300"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_300"
                    android:layout_marginBottom="8dp" />

                <RadioButton
                    android:id="@+id/amount_500"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_500"
                    android:layout_marginBottom="8dp" />

                <RadioButton
                    android:id="@+id/amount_1000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_1000"
                    android:layout_marginBottom="8dp" />

                <RadioButton
                    android:id="@+id/amount_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other_amount"
                    android:layout_marginBottom="16dp" />
            </RadioGroup>

            <TextView
                android:id="@+id/recipient_info_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipient_info"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <RadioGroup
                android:id="@+id/recipient_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <RadioButton
                    android:id="@+id/for_someone_else"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/for_someone_else"
                    android:layout_marginEnd="16dp" />

                <RadioButton
                    android:id="@+id/for_myself"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/for_myself" />
            </RadioGroup>

            <EditText
                android:id="@+id/recipient_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipient_email"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/recipient_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipient_name"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/buy_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buy_now"
                android:background="@drawable/button_bg_red"
                android:textColor="@color/white"
                android:padding="16dp" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        android:background="@color/light_pink"
        app:itemIconTint="@color/black"
        app:itemTextAppearance="@color/black"
        app:menu="@menu/menu_drawer"/> <!--For sidenav bar.-->

</androidx.drawerlayout.widget.DrawerLayout>